--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +14,18 @@
 </head>
 
 <body>
-  <p>Hello World!</p>
+  <div id="insert"></div>
+  <label for="email">EMAIL</label>
+  <input type="text" name="email" id="email">
+  <label for="password">PASSWORD</label>
+  <input type="text" name="password" id="password">
+  <button id="button">enter</button>
+  <p>eve.holt@reqres.in</p>
+  <p>cityslicka</p>
+  <a href="/pages/home.html">to home</a>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
