--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <p>eve.holt@reqres.in</p>
   <p>cityslicka</p>
   <a href="/pages/home.html">to home</a>
+  <button id="delete_cookie">logout</button>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   <script src="/js/app.js"></script>
